support typescript syntax
This seems safe and useful, since typescript is committed to being a superset of javascript.

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.19.6",
+    "@babel/plugin-syntax-typescript": "^7.24.1",
     "diff": "^5.1.0",
     "prettier": "^2.7.1"
   },
