--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "default": "./dist/index.js"
       },
       "require": {
-        "types": "./dist/index.d.ts",
+        "types": "./dist/index.d.cts",
         "default": "./dist/index.cjs"
       }
     },
@@ -20,7 +20,7 @@
         "default": "./dist/qunit.js"
       },
       "require": {
-        "types": "./dist/qunit.d.ts",
+        "types": "./dist/qunit.d.cts",
         "default": "./dist/qunit.cjs"
       }
     },
@@ -30,7 +30,7 @@
         "default": "./dist/jest.js"
       },
       "require": {
-        "types": "./dist/jest.d.ts",
+        "types": "./dist/jest.d.cts",
         "default": "./dist/jest.cjs"
       }
     },
@@ -40,7 +40,7 @@
         "default": "./dist/chai.js"
       },
       "require": {
-        "types": "./dist/chai.d.ts",
+        "types": "./dist/chai.d.cts",
         "default": "./dist/chai.cjs"
       }
     }
@@ -79,7 +79,7 @@
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
-    "tsup": "^6.2.3",
+    "tsup": "^8.3.0",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
